(fix): layout breaking on timetable page

--- a/patches/newMobileNavbar/styles.css
+++ b/patches/newMobileNavbar/styles.css
@@ -145,3 +145,7 @@
         filter: invert(1);
     }
 }
+
+main.app__main {
+    width: 100vw !important;
+}
